# Engineer2026_Control

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_ubuntu20.04.md
arm_bringup/: CMakeLists.txt  package.xml
arm_bringup/launch/: arm_bringup.launch.py  view.launch.py
arm_hardware/: package.xml  setup.cfg  setup.py
arm_hardware/arm_hardware/: homing_node.py  uart_bridge_node.py
arm_hardware/config/: hardware_params.yaml
arm_hardware/launch/: hardware.launch.py
arm_teleop/: package.xml  setup.cfg  setup.py  test_pose_sender.py
arm_teleop/arm_teleop/: apriltag_teleop_node.py  ik_selection.py  ik_service_wrapper.py  ik_teleop_node.py  joint_monitor_node.py  keyboard_teleop_node.py  moveit_teleop_node.py  socket_teleop_node.py
arm_teleop/config/: cube_geometry.yaml  teleop_params.yaml
arm_teleop/launch/: teleop.launch.py
arm_teleop/tests/: test_ik_selection.py  test_workspace_pose_sender.py
arm_vision/: assembly_fsm.py  assembly_reachability.py  chassis_fsm.py  figure8_waypoint_sender.py  main.py  pickup_fsm.py  pose_waypoint_runner.py  requirements.txt  spacemouse_teleop.py  visualize_p_arc.py
arm_vision/arm_vision/: camera_cal.py  cube_cal.py  detector.py  pose_filter.py  socket_client.py  workspace.py
arm_vision/config/: assembly_params.yaml  chassis_params.yaml  chassis_storage_param.md  pickup_params.yaml  pose_waypoints.yaml  spacemouse_params.yaml  workspace.yaml
arm_vision/data/: camera_calibration.yaml  cube_config.yaml
arm_vision/tests/: test_figure8_waypoint_sender.py  test_pose_waypoint_runner.py
docker/ros2_humble_arm/: Dockerfile  ros_entrypoint.sh
robotic_arm_v4_urdf/: CMakeLists.txt  README_ros2_humble.md  package.xml
robotic_arm_v4_urdf/config/: controllers.yaml  display.rviz  joint_limits.yaml  joint_names_robotic_arm_v4_urdf.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  robotic_arm_v4.srdf  servo_params.yaml
robotic_arm_v4_urdf/launch/: control.launch.py  display.launch.py  display.launch.ros1.xml  gazebo.launch.py  gazebo.launch.ros1.xml  moveit_control.launch.py
robotic_arm_v4_urdf/meshes/: End_Effector.STL  J3_J4.STL  J5_J6.STL  Link0.STL  Link1.STL  Link2.STL  base_link.STL
robotic_arm_v4_urdf/urdf/: robotic_arm_v4_urdf.csv  robotic_arm_v4_urdf.urdf
scripts/: build_ros2_humble_arm_container.sh  clean_kill.sh  mcu_emulator.py  run_bringup_ik.sh  run_joint_monitor.sh  run_keyboard_teleop.sh  run_ros2_humble_arm_container.sh  run_ros2_humble_control.sh  run_ros2_humble_moveit_control.sh  run_view_only.sh  run_workspace_probe_test.sh  setup_arm_vision_venv.sh  setup_ros2_humble_deps.sh  setup_ubuntu20_arm_host.sh  test_pose_sender.py  workspace_pose_sender.py
